# vocalinux

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  CROSS_DISTRO_ANALYSIS.md  DESIGN.md  FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PRODUCT.md  README.md  RESEARCH.md  SECURITY.md  STREAMING_ARCHITECTURE.md  TASK.md  VK_RESEARCH_FINDINGS.md  WEB-DESLOP-NOTES.md  activate-ubuntu-voice-typing.sh  activate-vocalinux.sh  build-website.sh  codecov.yml  index.html  index.txt  install-whisper.sh  install.sh  pyproject.toml  pytest.ini  robots.txt  setup.py  site.webmanifest  sitemap.xml  test_complete_integration.py  test_complete_lazy.py  test_evdev_security.py  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
404/: index.html
advanced-settings/: index.html  index.txt
alternatives/: index.html  index.txt
autostart/: index.html  index.txt
changelog/: index.html  index.txt
codebase-analysis-docs/: CODEBASE_KNOWLEDGE.md
compare/: index.html  index.txt
desktop-reliability/: index.html  index.txt
docs/: ASR_EVALUATION.md  AUR.md  DISTRO_COMPATIBILITY.md  HTTP_REMOTE.md  INSTALL.md  RELEASE_PROCESS.md  UPDATE.md  USER_GUIDE.md  WHISPER_CPP.md  ponytail-audit-report.html
faq/: index.html  index.txt
for-developers/: index.html  index.txt
gnome-kde/: index.html  index.txt
gpu-acceleration/: index.html  index.txt
install/: index.html  index.txt
installer/: bootstrap.sh  build.order  build.sh
languages/: index.html  index.txt
offline/: index.html  index.txt
open-source/: index.html  index.txt
privacy/: index.html  index.txt
remote-api/: index.html  index.txt
rsi-prevention/: index.html  index.txt
screenshots/: index.html  index.txt
vocalinux-rs/: .gitignore  Cargo.toml  README.md
vocalinux-rs/src/: main.rs
vocalinux-rs/src/audio/: capture.rs  devices.rs  mod.rs  vad.rs
vocalinux-rs/src/config/: mod.rs
vocalinux-rs/src/speech/: command_processor.rs  gpu_info.rs  manager.rs  mod.rs  soniox.rs  vosk_engine.rs  whisper_engine.rs
vocalinux-rs/src/text_injection/: injector.rs  mod.rs
vocalinux-rs/src/ui/: app.rs  mod.rs  settings.rs  tray.rs
(+482 files in other folders)
