[package]
name = "vocalinux"
version = "0.5.0"
edition = "2021"
authors = ["Vocalinux Contributors"]
description = "Voice-controlled dictation for Linux - Rust edition"
license = "MIT"
repository = "https://github.com/vocalinux/vocalinux"
keywords = ["speech-recognition", "dictation", "linux", "accessibility"]
categories = ["accessibility", "multimedia::audio"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Audio capture
cpal = "0.15"

# Speech recognition engines
vosk = { version = "0.3", optional = true }
whisper-rs = { version = "0.12", optional = true }

# WebSocket for Soniox
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# GTK UI
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

# System tray
tray-icon = "0.19"
muda = "0.15"  # Menu for tray

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
crossbeam-channel = "0.5"
parking_lot = "0.12"
notify-rust = "4.10"  # Desktop notifications
regex-lite = "0.1"  # Lightweight regex for command processing
zip = "2.1"  # For extracting VOSK models
open = "5.1"  # For opening URLs

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "native-tls"] }
indicatif = "0.17"  # Progress bars

# Keyboard shortcuts
rdev = "0.5"  # Global keyboard listener

# Text injection
enigo = "0.2"  # Cross-platform input simulation

# Keyring for secure API key storage
keyring = "3"

[features]
default = ["vosk", "whisper", "soniox"]
vosk = ["dep:vosk"]
whisper = ["dep:whisper-rs"]
soniox = []  # Always available (uses WebSocket)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
